--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -28,7 +28,7 @@ jobs:
 
       # Install the Apple Certificate and Provisioning Profile (if secrets are set)
       - name: Install Apple Certificate and Profile
-        if: secrets.BUILD_CERTIFICATE_BASE64 != ''
+        if: ${{ secrets.BUILD_CERTIFICATE_BASE64 != '' }}
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
           P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
@@ -59,15 +59,14 @@ jobs:
 
       # Build Signed IPA (if secrets exist)
       - name: Build Signed IPA
-        if: secrets.BUILD_CERTIFICATE_BASE64 != ''
+        if: ${{ secrets.BUILD_CERTIFICATE_BASE64 != '' }}
         run: |
           flutter build ios --release --no-codesign
-          # Attempting standard build which should pick up the installed profile
           flutter build ios --release --export-options-plist=ios/ExportOptions.plist
 
       # Build Unsigned (Fallback if no secrets)
       - name: Build Unsigned (No Secrets)
-        if: secrets.BUILD_CERTIFICATE_BASE64 == ''
+        if: ${{ secrets.BUILD_CERTIFICATE_BASE64 == '' }}
         run: flutter build ios --release --no-codesign
 
       # Upload Artifacts
