--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -27,8 +27,9 @@ jobs:
         run: flutter pub get
 
       # Install the Apple Certificate and Provisioning Profile (if secrets are set)
+      # Install the Apple Certificate and Provisioning Profile (if secrets are set)
       - name: Install Apple Certificate and Profile
-        if: secrets.BUILD_CERTIFICATE_BASE64 != ''
+        if: ${{ secrets.BUILD_CERTIFICATE_BASE64 != '' }}
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
           P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
@@ -59,7 +60,7 @@ jobs:
 
       # Build Signed IPA (if secrets exist)
       - name: Build Signed IPA
-        if: secrets.BUILD_CERTIFICATE_BASE64 != ''
+        if: ${{ secrets.BUILD_CERTIFICATE_BASE64 != '' }}
         run: |
           flutter build ios --release --no-codesign
           # Attempting standard build which should pick up the installed profile
@@ -67,7 +68,7 @@ jobs:
 
       # Build Unsigned (Fallback if no secrets)
       - name: Build Unsigned (No Secrets)
-        if: secrets.BUILD_CERTIFICATE_BASE64 == ''
+        if: ${{ secrets.BUILD_CERTIFICATE_BASE64 == '' }}
         run: flutter build ios --release --no-codesign
 
       # Upload Artifacts
